# Bank-review-summary

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  jobs.py  main.py
backend/app/static/: index.html
backend/asm_review/: __init__.py  config.py  pipeline.py  verify.py
backend/asm_review/ingest/: __init__.py  loader.py
backend/asm_review/llm/: __init__.py  extract.py  prompts.py  provider.py  reason.py
backend/asm_review/render/: __init__.py  docx_renderer.py
backend/asm_review/schema/: __init__.py  fields.py  models.py
backend/tests/: conftest.py  test_docx_renderer.py  test_pipeline_smoke.py  test_prompts.py  test_schema.py  test_verify.py
cam-platform/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
cam-platform/docs/: LIVE_RUN.md  architecture.md  contracts.md  traceability.md
cam-platform/docs/adr/: 0001-monorepo-one-distribution.md  0002-gateway-apim-standin.md  0003-generic-master-engine.md  0004-persistence-and-queue.md  0005-genai-gateway.md  0006-agentic-pipeline.md
cam-platform/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
cam-platform/frontend/src/: App.tsx  styles.css
cam-platform/scripts/: browser_check.py  e2e_demo.py  fake_openai_server.py  live_check.py  llm_smoke.py  masters_bundle.py  run_stack.py  seed_demo.py
cam-platform/tests/: conftest.py  test_connectors.py  test_document_service.py  test_genai.py  test_genai_openai_provider.py  test_master_config.py  test_masters_bulk.py  test_orchestration.py  test_output_service.py  test_product_hardening.py  test_tagging_service.py
(+87 files in other folders)
