[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asm-review"
version = "0.1.0"
description = "LLM extraction + reasoning pipeline that turns ASM stock-audit reports into a Word review note."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.69",
    "python-docx>=1.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["asm_review*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
