[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cam-platform"
version = "0.1.0"
description = "AI-Assisted Credit Assessment Memo (CAM) Generation Platform — services monorepo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "PyJWT>=2.8",
    "python-multipart>=0.0.9",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "fpdf2>=2.7",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.34"]
postgres = ["psycopg[binary]>=3.1"]
dev = ["pytest>=8", "anthropic>=0.34"]

[tool.hatch.build.targets.wheel]
packages = ["src/cam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
